--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,16 @@
             name="description"
             content="Web site created using create-react-app"
         />
+        <!-- <meta property="og:title" content="The Rock" />
+        <meta property="og:type" content="video.movie" />
+        <meta
+            property="og:url"
+            content="Portfolio Page"
+        />
+        <meta
+            property="og:image"
+            content="./../../assets/images/"
+        /> -->
         <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
         <title>Ratnesh Mether Portfolio</title>
