--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="An adept frontend developer fluent in React, Angular, JavaScript, HTML and CSS dedicated to showcasing expertise and fostering collaborations. Let's build brilliance together!"
         />
         <!-- <meta property="og:title" content="The Rock" />
         <meta property="og:type" content="video.movie" />
